 ####    #### ####    #### ############ ####         #### ####
 ####    #### ####    #### ####    #### ####         ####  ####
  ####  ####   ####   #### ####    #### ####         ####   ####
   ########     ########## ####    #### ####         ####    ####
       #####
        #####      Quake Army Knife 6.6 Changelog


6.6.0 Beta 8
============
* [DanielPharos]: Fixed a bug where path duplicators would be missing pieces when one
          - section was almost an extension of the previous one, but not quite.

* [DanielPharos]: Improvements to .rmf file loading: specifics are now also being loaded.

* [DanielPharos]: Added Cry of Fear support.

* [DanielPharos]: Cache texture sizes during the saving of .vmf files, and handle 'hidden'
          - items inside entities in .vmf files. Also, actually hide them.

6.6.0 Beta 7
============
* [DanielPharos]: Implemented Scroll Lock support in treeviews.

* [DanielPharos]: Implemented double buffering for the wireframe renderer, which results
          - in a very large performance improvement on modern operating systems.

* [DanielPharos]: Added Urban Terror 4 addon.

* [DanielPharos]: Improved fog/fade of the software renderer to match Glide more closely.

* [DanielPharos]: Also cache texture sizes during brushdef loading for a big speed improvement.

* [DanielPharos]: Vast improvements to the OpenGL lighting quality and performance.

* [DanielPharos]: Added support for loading and saving of new KMQuake2 surface color data.

* [DanielPharos]: Improved the software renderer to use 16-bit floating point depth buffering.

* [DanielPharos]: Added experimental Genesis3D .bsp file loading and saving support.

* [DanielPharos]: Quake 3 BSP file loader can now handle faces that have vertices that lay on
          - a single line.

* [DanielPharos]: Made the Open and Save dialogs resizable (only supported on Windows 98,
          - Windows 2000, and higher).
